Update menu, colors, footer, icons

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -5,8 +5,8 @@ import logo from '~/assets/favicons/favicon.svg';
 ---
 
 <div class="flex justify-start">
-  <Image src={logo} alt={SITE?.name} width={65} />
-  <div class="pt-3 ml-2 text-2xl md:text-xl text-white whitespace-nowrap dark:text-white">
+  <Image src={logo} alt={SITE?.name} width={70} />
+  <div class="pt-5 ml-2 text-2xl md:text-xl text-black whitespace-nowrap dark:text-white">
     {SITE?.name}
   </div>
 </div>
