--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -26,7 +26,7 @@ import '@fontsource-variable/inter';
     --aw-font-heading: var(--aw-font-sans);
 
     --aw-color-primary: rgb(30 64 175);
-    --aw-color-secondary: #28d4fc;
+    --aw-color-secondary: #D9D9D9;
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0); 
