--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -25,8 +25,8 @@ import '@fontsource-variable/inter';
     --aw-font-serif: var(--aw-font-sans);
     --aw-font-heading: var(--aw-font-sans);
 
-    --aw-color-primary: rgb(30 64 175);
-    --aw-color-secondary: #D9D9D9;
+    --aw-color-primary: #02AD78;
+    --aw-color-secondary: #A7DDB3;
     --aw-color-accent: rgb(109 40 217);
 
     --aw-color-text-heading: rgb(0 0 0); 
