--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: "Transiscapade, l'escapade au coeur des territoires pour découvrir les alternatives inspirantes pour un monde plus soutenable",
   ignoreTitleTemplate: true,
 };
 ---
@@ -25,28 +25,23 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        text: 'Soutenez le projet',
+        href: 'https://fr.tipeee.com/transiscapade',
         target: '_blank',
-        icon: 'tabler:download',
+        icon: 'tabler:database',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'En savoir plus', href: '/accueil/qui' },
     ]}
-    image={{ src: '~/assets/images/hero.png', alt: 'AstroWind Hero Image' }}
+    image={{ src: '~/assets/images/hero.png', alt: 'Soutenez le projet' }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 4.0</span> + Tailwind CSS
+      L'escapade au coeur de la transition !
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 4.0
-        + Tailwind CSS.</span
+        <span class="font-semibold">Transiscapade</span>, un projet qui vous emporte au coeur des territoires, pour découvrir les alternatives inspirantes pour un monde plus soutenable</span
       >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages
-      & Blogs.
     </Fragment>
   </Hero>
 
