Add new image and FAQ

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const metadata = {
       {
         title: "Transi-tion",
         description:
-          "La transition, c'est l'évolution de l'humanité vers un monde plus soutenable",
+          "La transition, c'est l'évolution de l'humanité vers un monde plus résilient",
         icon: 'tabler:route',
       },
       {
@@ -67,7 +67,7 @@ const metadata = {
       {
         title: "Transi-scope",
         description:
-          "Transiscope.org est un site web contenant une carte agrégative d'une cinquantaine de sources locales (bases de données d'alternatives), animés par des groupes locaux, qui référencent des alternatives de transition",
+          "www.transiscope.org est un site web contenant une carte agrégative d'une cinquantaine de sources locales (bases de données d'alternatives), animés par des groupes locaux, qui référencent des alternatives de transition",
         icon: 'tabler:search',
       },
       {
@@ -76,6 +76,72 @@ const metadata = {
           "C'est un événement organisé par le projet Transiscope tous les 6 mois, dans une ville de France, pour fêter et cartographier les alternatives locales",
         icon: 'tabler:home',
       }
+    ]}
+  />
+
+  <!-- FAQs Widget ******************* -->
+
+  <FAQs
+    title="Foire aux questions"
+    subtitle="Les réponses aux questions les plus souvent posées."
+    tagline="FAQs"
+    classes={{ container: 'max-w-6xl' }}
+    items={[
+      {
+        title: "Pourquoi le nom Transiscapade ?",
+        description:
+          "C'est d'abord lié au projet Transiscope, et l'envie était de se connecter aux territoire pour incarner mieux le projet. On aurait pu l'appeler Transibalade, mais ça faisait moins de points au scrable...",
+      },
+      {
+        title: "C'est quoi cet engin ?",
+        description:
+          "Le vhélio, est un vélo solaire auto-construit. C'est le produit que propose l'association 'Vélo Solaire pour tous', qui met en open-source les plans et la documentation pour fabriquer un vhélio.",
+      },
+      {
+        title: "Combien de temps va durer chaque Transiscapade ?",
+        description:
+          "Cela dépend de la ville où se trouve les Transiscothons. Pour celui de Marseille, je vais parcourir environ 2000 Km en 2 mois",
+      },
+      {
+        title: "Quel est ton itinéraire ?",
+        description:
+          "Pour la première transiscapade (le Mans > Marseille), je vais faire une boucle : Tours, Vierzon, Bourges, Nevers, Lyon, Marseille, Toulouse, Bordeau et retour à Tours.",
+      },
+      {
+        title: "Qu'as-tu emporté sur ton vélo solaire ?",
+        description:
+          "Une batterie de secours, une boite à outils pour intervenir si besoin sur le vélo solaire, des vêtements de rechange, un peu de nourriture, de qui boire, un réchaud gaz, un matelas gonflable, 2 paires de chaussures, un ordinateur portable pour travailler et un ukulele pour faire de la musique avec celleux que je croise.",
+      },
+      {
+        title: "Quel poids fait le vélo solaire en tout ?",
+        description:
+          "Nu, le vélo solaire pèse 70 kg. Avec les bagages, environ 120 kg, plus moi...",
+      },
+      {
+        title: "Quelle puissance font le moteur, la batterie et le panneau photovoltaique ?",
+        description:
+          "Le moteur : 250 W, la batterie : 250 W, et le panneau photovoltaique : 235 W",
+      },
+      {
+        title: "Le panneau photovoltaique permet-il de recharger la batterie ?",
+        description:
+          "Cela dépend de l'ensoleillement, et de l'assistance dont j'ai besoin... Si je contribue moyennement, et qu'il fait beau (ciel bleu), je peux tenir indéfiniement. S'il y a des nuages, et que je demande une assistance maximale, je peux vider les 2 batteries en 30 km ! :)",
+      },
+      {
+        title: "A quelle vitesse roules-tu en moyenne ?",
+        description:
+          "Cela dépend du dénivelé. S'il ya des côtes et des pentes, je suis à 10 km/h en côte et maximum 25 km en descente. Sur du plat, je suis en général à 15-20 km/h en moyenne. La réglementation impose de ne pas dépasser 25 Km/h, et c'est déjà très bien.",
+      },
+      {
+        title: "Est-ce dangereux de traverser la France à Vélo ?",
+        description:
+          "Il faut rester concentrer et vigilent, mais globalement, si vous suivez les voix vertes, cela représente 95% de petites routes de campagne très calmes.",
+      },
+      {
+        title: "Es-tu entrainé physiquement ?",
+        description:
+          "Pas particulièrement, je me suis remis au vélo depuis 2 ans, et j'ai mon vélo solaire depuis 8 mois. J'ai juste testé en condition de froid assez régulièrement. Pour la transiscapade, je m'étire régulièrement, je bois souvent, et je respire profondément.",
+      },
     ]}
   />
 
