--- a/src/pages/accueil/qui.astro
+++ b/src/pages/accueil/qui.astro
@@ -45,14 +45,16 @@ const metadata = {
       { variant: 'primary', target: '_blank', text: 'Soutenez le projet', href: 'https://fr.tipeee.com/transiscapade' },
       { text: 'Page Facebook', href: 'https://www.facebook.com/profile.php?id=61556861211105' },
     ]}
-    image={{ src: '~/assets/images/yannick-vhelio.png', alt: 'Yannick sur son vhélio' }}
+    image={{ src: '~/assets/images/yannick-vhelio.jpeg', alt: 'Yannick sur son vhélio' }}
   >
     <Fragment slot="title">
       Qui sui-je ?
     </Fragment>
 
     <Fragment slot="subtitle">
-         Un passionné des alternatives de transition
-         <br /> Voilà plusieurs années que pars à la recherche de nouvelles alternatives dans nos territoires...
+         Je m'appelle Yannick DUTHE, et je suis un passionné de la transition
+         <br /> <br /> Voilà uen dizaine d'années que je pars à la recherche de nouvelles alternatives dans nos territoires et que je visite des lieux inspirants autour de chez moi (projet "Permalieux").
+         <br /> <br /> Je suis aussi développeur web au sein de l'association Assemblée virtuelle (AV), dont l'objectif est de cartographier la transition en utilisant un web plus standardisé, distribué (non centralisé), dont les données appartiennent aux individus.
+         <br /> <br /> En 2023, j'ai eu la chance de pouvoir co-fabriquer mon vélo solaire, ce qui va me permettre d'aller visiter et de faire connaitre toutes les initiatives et alternatives de nos territoires ! C'est justement l'objectif de notre projet Transiscope, qui est la carte de france des alternatives.
     </Fragment>
   </Hero2>
