--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,6 +108,11 @@ const metadata = {
           "Pour la première transiscapade (le Mans > Marseille), je vais faire une boucle : Tours, Vierzon, Bourges, Nevers, Lyon, Marseille, Toulouse, Bordeau et retour à Tours.",
       },
       {
+        title: "Combien de Km fais-tu par jour ?",
+        description:
+          "Pour la première, je vais faire des tronçons entre 50 et 70 km. On verra ensuite si j'arrive à en faire plus... Mais je n'ai pas envie de me presser.",
+      },
+      {
         title: "Qu'as-tu emporté sur ton vélo solaire ?",
         description:
           "Une batterie de secours, une boite à outils pour intervenir si besoin sur le vélo solaire, des vêtements de rechange, un peu de nourriture, de qui boire, un réchaud gaz, un matelas gonflable, 2 paires de chaussures, un ordinateur portable pour travailler et un ukulele pour faire de la musique avec celleux que je croise.",
