Improve button to video youtube and fb

--- a/src/pages/accueil/qui.astro
+++ b/src/pages/accueil/qui.astro
@@ -40,7 +40,7 @@ const metadata = {
   <!-- Hero2 Widget ******************* -->
 
   <Hero2
-    tagline="Yannick"
+    tagline="Mon parcours"
     actions={[
       { variant: 'primary', target: '_blank', text: 'Soutenez le projet', href: 'https://fr.tipeee.com/transiscapade' },
       { text: 'Page Facebook', href: 'https://www.facebook.com/profile.php?id=61556861211105' },
@@ -52,9 +52,9 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-         Je m'appelle Yannick DUTHE, et je suis un passionné de la transition
-         <br /> <br /> Voilà uen dizaine d'années que je pars à la recherche de nouvelles alternatives dans nos territoires et que je visite des lieux inspirants autour de chez moi (projet "Permalieux").
-         <br /> <br /> Je suis aussi développeur web au sein de l'association Assemblée virtuelle (AV), dont l'objectif est de cartographier la transition en utilisant un web plus standardisé, distribué (non centralisé), dont les données appartiennent aux individus.
-         <br /> <br /> En 2023, j'ai eu la chance de pouvoir co-fabriquer mon vélo solaire, ce qui va me permettre d'aller visiter et de faire connaitre toutes les initiatives et alternatives de nos territoires ! C'est justement l'objectif de notre projet Transiscope, qui est la carte de france des alternatives.
+         Je m'appelle Yannick DUTHE, je suis un passionné de la transition
+         <br /> <br /> Depuis une dizaine d'années, je recherche et je cartographie les alternatives dans nos territoires en visitant des lieux inspirants autour de chez moi (projet "Permalieux").
+         <br /> <br /> Je suis aussi développeur web au sein de l'association Assemblée virtuelle (AV), dont l'objectif est de cartographier la transition en utilisant un web plus standardisé, distribué (non centralisé), respectant les données personnelles.
+         <br /> <br /> En 2023, j'ai eu la chance de pouvoir co-fabriquer mon vélo solaire, ce qui va me permettre d'aller visiter et de rendre visible ces alternatives sur notre site Transiscope.org, la carte de france des alternatives.
     </Fragment>
   </Hero2>
