change description title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,7 +52,7 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Transiscapade</span>, un projet qui vous emporte au coeur des territoires, pour découvrir les alternatives inspirantes pour un monde plus soutenable</span
+        <span class="font-semibold">Transiscapade</span>, un projet qui vous emporte au coeur des territoires, pour découvrir les alternatives inspirantes</span
       >
     </Fragment>
   </Hero>
