New title on index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,8 +52,9 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Transiscapade</span>, un projet qui vous emporte au coeur des territoires, pour découvrir les alternatives inspirantes</span
-      >
+        Partons ensemble, découvrir les alternatives de notre territoire !
+        <br/> Première Transiscapade (mars > avril 2024) : Le Mans > Marseille 
+      </span>
     </Fragment>
   </Hero>
 
