--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ const metadata = {
       {
         title: "Transi-tion",
         description:
-          "La transition, c'est l'évolution de l'humanité vers un monde plus résilient",
+          "La transition, c'est imaginer et vouloir que l'humanité évolue vers un monde plus vivant",
         icon: 'tabler:route',
       },
       {
@@ -114,22 +114,22 @@ const metadata = {
       {
         title: "Combien de temps va durer chaque Transiscapade ?",
         description:
-          "Cela dépend de la ville où se trouve les Transiscothons. Pour celui de Marseille, je vais parcourir environ 2000 Km en 2 mois",
+          "Cela dépend de la ville où se trouve les Transiscothons. Pour celui de Marseille, je vais parcourir environ 2000 Km en 2 mois (A/R).",
       },
       {
         title: "Quel est ton itinéraire ?",
         description:
-          "Pour la première transiscapade (le Mans > Marseille), je vais faire une boucle : Tours, Vierzon, Bourges, Nevers, Lyon, Marseille, Toulouse, Bordeau et retour à Tours.",
+          "Pour la première transiscapade (le Mans > Marseille), je vais faire une boucle : Tours, Vierzon, Bourges, Nevers, Lyon, Marseille, Toulouse, Bordeaux et retour à Tours (voir Menu > Itinéraires dans le bandeau du haut...).",
       },
       {
         title: "Combien de Km fais-tu par jour ?",
         description:
-          "Pour la première, je vais faire des tronçons entre 50 et 70 km. On verra ensuite si j'arrive à en faire plus... Mais je n'ai pas envie de me presser.",
+          "Pour la première, je vais faire des tronçons entre 40 et 70 km. Mon objectif est plus l'endurance que la vitesse.",
       },
       {
         title: "Qu'as-tu emporté sur ton vélo solaire ?",
         description:
-          "Une batterie de secours, une boite à outils pour intervenir si besoin sur le vélo solaire, des vêtements de rechange, un peu de nourriture, de qui boire, un réchaud gaz, un matelas gonflable, 2 paires de chaussures, un ordinateur portable pour travailler et un ukulele pour faire de la musique avec celleux que je croise.",
+          "Une batterie de secours, une boite à outils, des vêtements de rechange, un peu de nourriture, de qui boire, un réchaud gaz, un matelas gonflable, 2 paires de chaussures, un ordinateur portable pour travailler et un ukulele pour faire de la musique avec celleux que je croise.",
       },
       {
         title: "Quel poids fait le vélo solaire en tout ?",
@@ -149,7 +149,7 @@ const metadata = {
       {
         title: "A quelle vitesse roules-tu en moyenne ?",
         description:
-          "Cela dépend du dénivelé. S'il ya des côtes et des pentes, je suis à 10 km/h en côte et maximum 25 km en descente. Sur du plat, je suis en général à 15-20 km/h en moyenne. La réglementation impose de ne pas dépasser 25 Km/h, et c'est déjà très bien.",
+          "Cela dépend du dénivelé. S'il ya des côtes et des pentes, je suis à 10 km/h en côte et maximum 25 km en descente. Sur du plat, je suis en général à 15-20 km/h en moyenne. La réglementation impose de ne pas dépasser 25 Km/h, et c'est déjà suffisant. Au dela, cela peut être dangereux pour moi et pour les autres.",
       },
       {
         title: "Est-ce dangereux de traverser la France à Vélo ?",
@@ -160,6 +160,16 @@ const metadata = {
         title: "Es-tu entrainé physiquement ?",
         description:
           "Pas particulièrement, je me suis remis au vélo depuis 2 ans, et j'ai mon vélo solaire depuis 8 mois. J'ai juste testé en condition de froid assez régulièrement. Pour la transiscapade, je m'étire régulièrement, je bois souvent, et je respire profondément.",
+      },
+      {
+        title: "Le vélo solaire est-il la solution de demain ?",
+        description:
+          "Non, la solution pour demain est d'abord de moins nous déplacer, ou d'utiliser la marche ou le vélo. Pour déplacer une personne, le meilleur moyen reste le vélo. Le vélo solaire (avec batteries, panneau photovoltaique et moteur), ne servent qu'à transporter les bagages et le poids du vélo lui-même",
+      },
+      {
+        title: "Pourquoi Marseille ?",
+        description:
+          "Parce qu'après, il y a la mer, et le vhélio ne va pas dans l'eau.",
       },
     ]}
   />
