--- a/src/pages/accueil/presse.astro
+++ b/src/pages/accueil/presse.astro
@@ -56,9 +56,10 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-         * Actu.fr : <a href="https://actu.fr/pays-de-la-loire/allonnes_72003/il-va-parcourir-pres-de-900-kilometres-en-un-mois-a-bord-dun-velo-solaire_60780828.html" target="_blank">Il va parcourir près de 900 kilometres en un mois à bord d'un vélo solaire</a>
-         <br />* Ouest-France : <a href="https://www.ouest-france.fr/pays-de-la-loire/allonnes-72700/depuis-allonnes-ce-sarthois-va-rejoindre-marseille-a-velo-solaire-e148e6b4-dd53-11ee-a459-4d0565cc4317" target="_blank">Depuis Allonnes ce sarthois va rejoindre Marseille à vélo solaire</a>
-         <br />* Le Mans TV : <a href="https://www.youtube.com/watch?v=ey1ELsuPLnA" target="blank">Reportage sur la Transiscapade</a>
-         <br />* Le petit courrier : voir photo ci-jointe...
+         <br />* <b>Le Mans TV</b> : <a href="https://www.youtube.com/watch?v=33aO5jrxcSA" target="blank">Reportage sur le vhélio au Mans</a>
+         <br />* <b>Actu.fr</b> : <a href="https://actu.fr/pays-de-la-loire/allonnes_72003/il-va-parcourir-pres-de-900-kilometres-en-un-mois-a-bord-dun-velo-solaire_60780828.html" target="_blank">Il va parcourir près de 900 kilometres en un mois à bord d'un vélo solaire</a>
+         <br />* <b>Ouest-France</b> : <a href="https://www.ouest-france.fr/pays-de-la-loire/allonnes-72700/depuis-allonnes-ce-sarthois-va-rejoindre-marseille-a-velo-solaire-e148e6b4-dd53-11ee-a459-4d0565cc4317" target="_blank">Depuis Allonnes ce sarthois va rejoindre Marseille à vélo solaire</a>
+         <br />* <b>Le Mans TV</b> : <a href="https://www.youtube.com/watch?v=ey1ELsuPLnA" target="blank">Reportage sur la Transiscapade</a>
+         <br />* <b>Le petit courrier</b> : voir photo ci-jointe...
     </Fragment>
   </Hero2>
