Add itineraire 3 + Presse Provence

--- a/src/pages/accueil/presse.astro
+++ b/src/pages/accueil/presse.astro
@@ -61,5 +61,6 @@ const metadata = {
          <br />* <b>Ouest-France</b> : <a href="https://www.ouest-france.fr/pays-de-la-loire/allonnes-72700/depuis-allonnes-ce-sarthois-va-rejoindre-marseille-a-velo-solaire-e148e6b4-dd53-11ee-a459-4d0565cc4317" target="_blank">Depuis Allonnes ce sarthois va rejoindre Marseille à vélo solaire</a>
          <br />* <b>Le Mans TV</b> : <a href="https://www.youtube.com/watch?v=ey1ELsuPLnA" target="blank">Reportage sur la Transiscapade</a>
          <br />* <b>Le petit courrier</b> : voir photo ci-jointe...
+         <br />* <b>La Provence</b> : <a href="https://www.laprovence.com/article/region/53532548282371/parti-du-mans-il-parcourt-900-km-jusqua-marseille-a-bord-d-un-velo-solaire" target="blank">Arrivée à Marseille</a>
     </Fragment>
   </Hero2>
