--- a/src/pages/itineraires/itineraire3.astro
+++ b/src/pages/itineraires/itineraire3.astro
@@ -50,23 +50,27 @@ const metadata = {
       { text: 'Facebook', href: 'https://www.facebook.com/profile.php?id=61556861211105' },
       { text: 'Vidéos', href: 'https://www.youtube.com/@Transiscapade-rm8es' },
     ]}
-    image={{ src: '~/assets/images/provence.jpg', alt: 'Yannick sur son vhélio' }}
+    image={{ src: '~/assets/images/Marseille-Toulouse.jpeg', alt: 'Yannick sur son vhélio' }}
   >
     <Fragment slot="title">
-      Lyon > Marseille
+      Marseille > Toulouse
     </Fragment>
 
     <Fragment slot="subtitle">
-Lundi 18/03 : Lyon > Givors > Vienne (38km)
-<br />- Mardi 19/03 : Vienne > Andance (44km)
-<br />- Mercredi 20/03 : Andance > Valence (47km)
-<br />- jeudi 21/03 : Valence > Crest (33km)
-<br />- vendredi 22/03 : Crest > Montélimar (36km)
-<br />- samedi 23/03 : Montélimar > Bourg Saint andeol (27km)
-<br />- dimanche 24/03 : Bourg Saint Andeol > Avignon (65 km)
-<br />- lundi 25/03 : Avignon > Eyragues (25 km)
-<br />- Mardi 26/03 : Eyragues > Salon (43 km)
-<br />- Mercredi 27/03 : Salon > Aix (34 km)
-<br />- Jeudi 28/03 : Aix > Marseille (38 km)
+Lundi 1/04 - Marseille > Auriol
+<br />- Mardi 2/04 - Aix-en-Provence
+<br />- Mercredi 3/04 - Pélissanne
+<br />- Jeudi 4/04 - Arles
+<br />- Vendredi 5/04 - Saint-gilles
+<br />- Samedi 6/04 - Aigues mortes
+<br />- Dimanche 7/04 - Palavas les flots
+<br />- Lundi 8/04 - Poussan
+<br />- 13/04 - Agde
+<br />- 14/04 - Béziers 
+<br />- 15/04 - Felines-Minervois
+<br />- 16/04 - Lézignan-corbiere
+<br />- 17/04 - Carcassonne
+<br />- 18/04 - Castelnaudary
+<br />- 19/04 - Labarthe sur leze, puis le 20/04 à Toulouse
     </Fragment>
   </Hero2>
