--- a/src/pages/itineraires/itineraire3.astro
+++ b/src/pages/itineraires/itineraire3.astro
@@ -12,7 +12,7 @@ import FAQs from '~/components/widgets/FAQs.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
 
 const metadata = {
-  title: 'Itinéraire Lyon > Marseille',
+  title: 'Itinéraire Marseille > Toulouse',
 };
 ---
 
