--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const metadata = {
       { 
         variant: 'primary', 
         text: 'Voir les vidéos', 
-        href: 'https://www.youtube.com/@Transiscapade-rm8es',
+        href: 'https://www.youtube.com/@Transiscapade',
         target: '_blank',
         icon: 'tabler:brand-youtube',
       },
