--- a/src/pages/itineraires/itineraire2.astro
+++ b/src/pages/itineraires/itineraire2.astro
@@ -34,7 +34,7 @@ const metadata = {
         {
           variant: 'primary',
           text: 'Vidéos',
-          href: 'https://www.youtube.com/@Transiscapade-rm8es',
+          href: 'https://www.youtube.com/@Transiscapade',
         },
       ]}
       isSticky
@@ -48,7 +48,7 @@ const metadata = {
     actions={[
       { variant: 'primary', target: '_blank', text: 'Soutenez le projet', href: 'https://fr.tipeee.com/transiscapade' },
       { text: 'Facebook', href: 'https://www.facebook.com/profile.php?id=61556861211105' },
-      { text: 'Vidéos', href: 'https://www.youtube.com/@Transiscapade-rm8es' },
+      { text: 'Vidéos', href: 'https://www.youtube.com/@Transiscapade' },
     ]}
     image={{ src: '~/assets/images/provence.jpg', alt: 'Yannick sur son vhélio' }}
   >
