--- a/src/pages/accueil/presse.astro
+++ b/src/pages/accueil/presse.astro
@@ -34,7 +34,7 @@ const metadata = {
         {
           variant: 'primary',
           text: 'Vidéos',
-          href: 'https://www.youtube.com/@Transiscapade-rm8es',
+          href: 'https://www.youtube.com/@Transiscapade',
         },
       ]}
       isSticky
