--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,10 +39,24 @@ const metadata = {
       },
       { 
         variant: 'primary', 
-        text: 'Page Facebook', 
+        text: 'Facebook', 
         href: 'https://www.facebook.com/profile.php?id=61556861211105',
         target: '_blank',
         icon: 'tabler:brand-facebook',
+      },
+      { 
+        variant: 'primary', 
+        text: 'Instagram', 
+        href: 'https://www.instagram.com/transiscapade_1/',
+        target: '_blank',
+        icon: 'tabler:brand-instagram',
+      },
+      { 
+        variant: 'primary', 
+        text: 'LinkedIn', 
+        href: 'https://www.linkedin.com/in/yannick-duthe-569a741b/',
+        target: '_blank',
+        icon: 'tabler:brand-linkedin',
       },
     ]}
   >
@@ -53,7 +67,7 @@ const metadata = {
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
         Partons ensemble, découvrir les alternatives de notre territoire !
-        <br/> Première Transiscapade (mars > avril 2024) : Le Mans > Marseille 
+        <br/><br/> Première Transiscapade (mars > avril 2024) : <br/> Le Mans > Lyon > Marseille > Montpellier > Toulouse > Bordeaux
       </span>
     </Fragment>
   </Hero>
