--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -185,6 +185,16 @@ const metadata = {
         description:
           "Parce qu'après, il y a la mer, et le vhélio ne va pas dans l'eau.",
       },
+      {
+        title: "Pourquoi avoir choisi le financement participatif pour ce projet ?",
+        description:
+          "J'ai détaillé tout cela dans le blog et dans une vidéo que je vous invite à consulter.",
+      },
+      {
+        title: "Comment aider le projet ?",
+        description:
+          "Vous pouvez nous aider bénévolement, en participant à la cartographie des alternatives via l'association de soutien à Transiscope. Vous pouvez aussi faire un don, soit à la Transiscapade, soit directement à Transiscope (voir site https://transiscope.com)",
+      },
     ]}
   />
 
