--- a/src/pages/itineraires/itineraire3.astro
+++ b/src/pages/itineraires/itineraire3.astro
@@ -58,15 +58,15 @@ Lundi 1/04 - Marseille > Auriol
 <br />- Mercredi 3/04 - Pélissanne
 <br />- Jeudi 4/04 - Arles
 <br />- Vendredi 5/04 - Saint-gilles
-<br />- Samedi 6/04 - Aigues mortes
-<br />- Dimanche 7/04 - Palavas les flots
-<br />- Lundi 8/04 - Poussan
-<br />- Samedi 13/04 - Agde
-<br />- Dimanche 14/04 > Lundi 15/04 - Béziers 
-<br />- Mardi 16/04 - Lézignan-corbiere
+<br />- Samedi 6/04 > 07/04 - Mudaison
+<br />- Lundi 8/04 > 13/04 - Poussan (Incluant une formation Process Work)
+<br />- Dimanche 14/04 - Agde
+<br />- Lundi 15/04 - Béziers 
+<br />- Mardi 16/04 - Narbonne
 <br />- Mercredi 17/04 - Felines-Minervois
 <br />- Jeudi 18/04 - Carcassonne
 <br />- Vendredi 19/04 - Castelnaudary
-<br />- Samedi 20/04 - Labarthe sur leze, puis le 20/04 à Toulouse
+<br />- Samedi 20/04 - Villefranche de Lauragais
+<br />- Dimanche 21/04 - Toulouse
     </Fragment>
   </Hero2>
