--- a/src/pages/itineraires/itineraire3.astro
+++ b/src/pages/itineraires/itineraire3.astro
@@ -58,15 +58,15 @@ Lundi 1/04 - Marseille > Auriol
 <br />- Mercredi 3/04 - Pélissanne
 <br />- Jeudi 4/04 - Arles
 <br />- Vendredi 5/04 - Saint-gilles
-<br />- Samedi 6/04 > 07/04 - Mudaison
-<br />- Lundi 8/04 > 13/04 - Poussan (Incluant une formation Process Work)
-<br />- Dimanche 14/04 - Agde
-<br />- Lundi 15/04 - Béziers 
-<br />- Mardi 16/04 - Narbonne
-<br />- Mercredi 17/04 - Felines-Minervois
-<br />- Jeudi 18/04 - Carcassonne
-<br />- Vendredi 19/04 - Castelnaudary
-<br />- Samedi 20/04 - Villefranche de Lauragais
-<br />- Dimanche 21/04 - Toulouse
+<br />- Samedi 6/04 > Dimanche 07/04 - Mudaison
+<br />- Lundi 8/04 > Samedi 13/04 - Poussan (Incluant une formation Process Work)
+<br />- Dimanche 14/04 > Lundi 15/04 - Agde / Cap d'Agde
+<br />- Mardi 16/04 - Béziers 
+<br />- Mercredi 17/04 - Narbonne
+<br />- Jeudi 18/04 - Felines-Minervois
+<br />- Vendredi 19/04 - Carcassonne
+<br />- Samedi 20/04 - Castelnaudary
+<br />- Dimanche 21/04 - Villefranche de Lauragais
+<br />- Lundi 22/04 - Toulouse
     </Fragment>
   </Hero2>
