--- a/src/pages/itineraires/itineraire3.astro
+++ b/src/pages/itineraires/itineraire3.astro
@@ -66,7 +66,7 @@ Lundi 1/04 - Marseille > Auriol
 <br />- Jeudi 18/04 - Felines-Minervois
 <br />- Vendredi 19/04 - Carcassonne
 <br />- Samedi 20/04 - Castelnaudary
-<br />- Dimanche 21/04 - Villefranche de Lauragais
+<br />- Dimanche 21/04 - Vieillevigne
 <br />- Lundi 22/04 - Toulouse
     </Fragment>
   </Hero2>
