--- a/src/pages/itineraires/itineraire2.astro
+++ b/src/pages/itineraires/itineraire2.astro
@@ -53,16 +53,16 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-Lundi 18/03 : Lyon > Givors > Vienne (38km)
-<br />- Mardi 19/03 : Vienne > Andance (44km)
-<br />- Mercredi 20/03 : Andance > Valence (47km)
-<br />- jeudi 21/03 : Valence > Crest (33km)
-<br />- vendredi 22/03 : Crest > Montélimar (36km)
-<br />- samedi 23/03 : Montélimar > Bourg Saint andeol (27km)
-<br />- dimanche 24/03 : Bourg Saint Andeol > Avignon (65 km)
-<br />- lundi 25/03 : Avignon > Eyragues (25 km)
-<br />- Mardi 26/03 : Eyragues > Salon (43 km)
-<br />- Mercredi 27/03 : Salon > Aix (34 km)
-<br />- Jeudi 28/03 : Aix > Marseille (38 km)
+Lundi 18/03 : Lyon > Vienne [38 km]
+<br />- Mardi 19/03 : Saint-Cyr [44 km]
+<br />- Mercredi 20/03 : Chateauneuf-sur-Isère [43 km]
+<br />- jeudi 21/03 : Aoust-sur-Sye [43 km]
+<br />- vendredi 22/03 : Montélimar [37 km]
+<br />- samedi 23/03 : Bourg Saint Andeol [26 km]
+<br />- dimanche 24/03 : Avignon [63 km]
+<br />- lundi 25/03 : Eyragues [16 km]
+<br />- Mardi 26/03 : Salon-de-Provence [40 km]
+<br />- Mercredi 27/03 : Aix-en-Provence [33 km]
+<br />- Jeudi 28/03 : Marseille [33 km]
     </Fragment>
   </Hero2>
