--- a/src/pages/itineraires/itineraire3.astro
+++ b/src/pages/itineraires/itineraire3.astro
@@ -53,20 +53,20 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-Lundi 1/04 - Marseille > Auriol
-<br />- Mardi 2/04 - Aix-en-Provence
-<br />- Mercredi 3/04 - Pélissanne
-<br />- Jeudi 4/04 - Arles
-<br />- Vendredi 5/04 - Saint-gilles
-<br />- Samedi 6/04 > Dimanche 07/04 - Mudaison
-<br />- Lundi 8/04 > Samedi 13/04 - Poussan (Incluant une formation Process Work)
-<br />- Dimanche 14/04 > Lundi 15/04 - Agde / Cap d'Agde
-<br />- Mardi 16/04 - Béziers 
-<br />- Mercredi 17/04 - Narbonne
-<br />- Jeudi 18/04 - Felines-Minervois
-<br />- Vendredi 19/04 - Carcassonne
-<br />- Samedi 20/04 - Castelnaudary
-<br />- Dimanche 21/04 - Vieillevigne
-<br />- Lundi 22/04 - Toulouse
+Lundi 1/04 - Marseille > Auriol [32 km]
+<br />- Mardi 2/04 - Aix-en-Provence [30 km]
+<br />- Mercredi 3/04 - Pélissanne [25 km]
+<br />- Jeudi 4/04 - Arles [54 km]
+<br />- Vendredi 5/04 - Saint-gilles [20 km]
+<br />- Samedi 6/04 > Dimanche 07/04 - Mudaison [39 km]
+<br />- Lundi 8/04 > Samedi 13/04 - Poussan [40 km] (Incluant une formation Process Work)
+<br />- Dimanche 14/04 > Lundi 15/04 - Agde / Cap d'Agde [30 km]
+<br />- Mardi 16/04 - Béziers [26 km]
+<br />- Mercredi 17/04 - Narbonne [35 km]
+<br />- Jeudi 18/04 - Sainte-Valière [26 km]
+<br />- Vendredi 19/04 - Palaja (Carcassonne) [51 km]
+<br />- Samedi 20/04 - Castelnaudary [46 km]
+<br />- Dimanche 21/04 - Vieillevigne [30 km]
+<br />- Lundi 22/04 - Toulouse [33 km]
     </Fragment>
   </Hero2>
