--- a/src/pages/itineraires/itineraire4.astro
+++ b/src/pages/itineraires/itineraire4.astro
@@ -60,7 +60,7 @@ const metadata = {
 <br />- 1/05 : Agen (27 km)
 <br />- 2/05 : Damazan (34 km)
 <br />- 3/05 : Marmande (35 km)
-<br />- 4/05 : Sauveterre de Guyenne (35 km)
-<br />- 5/05 : Bordeaux (58 km)
+<br />- 4/05 : Courpiac (45 km)
+<br />- 5/05 : Bordeaux (45 km)
     </Fragment>
   </Hero2>
