--- a/src/pages/itineraires/itineraire4.astro
+++ b/src/pages/itineraires/itineraire4.astro
@@ -54,13 +54,13 @@ const metadata = {
 
     <Fragment slot="subtitle">
 - 27/04: Toulouse
-<br />- 28/04 : Montbarthier (40 km)
-<br />- 29/04 : Dufort lacapelette (43km)
-<br />- 30/04 : Valence d'Agen (33 km)
-<br />- 1/05 : Agen (27 km)
-<br />- 2/05 : Damazan (34 km)
-<br />- 3/05 : Marmande (35 km)
-<br />- 4/05 : Courpiac (45 km)
-<br />- 5/05 : Bordeaux (45 km)
+<br />- Dimanche 28/04 : Montbarthier (40 km)
+<br />- Lundi 29/04 : Dufort lacapelette (43km)
+<br />- Mardi 30/04 : Valence d'Agen (33 km)
+<br />- Mercredi 1/05 : Agen (27 km)
+<br />- Jeudi 2/05 : Damazan (34 km)
+<br />- Vendredi 3/05 : Marmande (35 km)
+<br />- Samedi 4/05 : Courpiac (45 km)
+<br />- Dimanche 5/05 : Bordeaux (45 km)
     </Fragment>
   </Hero2>
