--- a/src/pages/itineraires/itineraire4.astro
+++ b/src/pages/itineraires/itineraire4.astro
@@ -53,14 +53,13 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-- 27/04: Toulouse
-<br />- Dimanche 28/04 : Montbarthier (40 km)
-<br />- Lundi 29/04 : Dufort lacapelette (43km)
-<br />- Mardi 30/04 : Valence d'Agen (33 km)
-<br />- Mercredi 1/05 : Agen (27 km)
-<br />- Jeudi 2/05 : Damazan (34 km)
-<br />- Vendredi 3/05 : Marmande (35 km)
-<br />- Samedi 4/05 : Courpiac (45 km)
-<br />- Dimanche 5/05 : Bordeaux (45 km)
+- 22/04 > 26/04 : Toulouse (Auzeville-Tolosanne)
+<br />- Samedi 27/04 : Verdun-sur-Garonne (47 km)
+<br />- Dimanche 28/04 : Moissac (39 km)
+<br />- Lundi 29/04 : Agen (44 km)
+<br />- Mardi 30/04 : Damazan (34 km)
+<br />- Mercredi 01/05 : Marmande (35 km)
+<br />- Jeudi 02/05 : Courpiac (56 km)
+<br />- Vendredi 03/05 : Bordeaux ou Libourne (si je décide de contourner Bordeaux) ?
     </Fragment>
   </Hero2>
