--- a/src/pages/itineraires/itineraire5.astro
+++ b/src/pages/itineraires/itineraire5.astro
@@ -55,15 +55,14 @@ const metadata = {
     <Fragment slot="subtitle">
     (En utilisant la voie verte de la Scandibérique)
 <br />- Vendredi 03/05 : Libourne (à la place de Bordeaux)
-<br />- Samedi 04/05 : Clérac [39 km]
-<br />- Dimanche 05/05 : Barbezieux-Saint-Hilaire [38 km]
-<br />- Lundi 06/05 : Angoulème [39 km]
-<br />- Mardi 07/05 : Chassenieul-sur-Bonnieure [38 km]
-<br />- Mercredi 08/05 : Confolens [34 km]
-<br />- Jeudi 09/05 : L'isle-jourdin [30 km]
-<br />- Vendredi 10/05 : Civaux [29 km]
-<br />- Samedi 11/05 : Châtellerault [49 km]
-<br />- Dimanche 12/05 : Sainte-Maure de Touraine [39 km]
-<br />- Lundi 13/05 : Montlouis [42 km]
+<br />- Samedi 04/05 : Saint-Romain [63 km]
+<br />- Dimanche 05/05 : Garat [50 km]
+<br />- Lundi 06/05 : Cellettes [36 km]
+<br />- Mardi 07/05 : Saulgond [60 km]
+<br />- Mercredi 08/05 : L'isle-jourdin [30 km]
+<br />- Jeudi 09/05 : Civaux [29 km]
+<br />- Vendredi 10/05 : Châtellerault [49 km]
+<br />- Samedi 11/05 : Sainte-Maure de Touraine [39 km]
+<br />- Dimanche 12/05 : Montlouis [42 km]
     </Fragment>
   </Hero2>
