--- a/src/pages/accueil/presse.astro
+++ b/src/pages/accueil/presse.astro
@@ -59,5 +59,6 @@ const metadata = {
          <br />* <b>Le Mans TV</b> : <a href="https://www.youtube.com/watch?v=ey1ELsuPLnA" target="blank">Reportage sur la Transiscapade</a>
          <br />* <b>Le petit courrier</b> : voir photo ci-jointe...
          <br />* <b>La Provence</b> : <a href="https://www.laprovence.com/article/region/53532548282371/parti-du-mans-il-parcourt-900-km-jusqua-marseille-a-bord-d-un-velo-solaire" target="blank">Arrivée à Marseille</a>
+         <br />* <b>Sud Ouest</b> : <a href="https://www.sudouest.fr/lot-et-garonne/buzet-sur-baise-il-fait-le-tour-de-france-a-velo-solaire-19560195.php" target="blank">Buzet-sur-baise, il fait le tour de france à vélo solaire</a>
     </Fragment>
   </Hero2>
