--- a/src/pages/itineraires/itineraire5.astro
+++ b/src/pages/itineraires/itineraire5.astro
@@ -59,7 +59,7 @@ const metadata = {
 <br />- Dimanche 05/05 : Garat [50 km]
 <br />- Lundi 06/05 : Cellettes [36 km]
 <br />- Mardi 07/05 : Saulgond [60 km]
-<br />- Mercredi 08/05 : L'isle-jourdin [30 km]
+<br />- Mercredi 08/05 : L'isle-jourdain [30 km]
 <br />- Jeudi 09/05 : Civaux [29 km]
 <br />- Vendredi 10/05 : Châtellerault [49 km]
 <br />- Samedi 11/05 : Sainte-Maure de Touraine [39 km]
